<resources>
    <string name="app_name">Royal Stag Large Run</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_start">start</string>
    <string name="title_activity_score">score</string>
    <string name="redeem">1.  To be redeemed at <a href="https://paytm.com/">bit.ly/19ESVgv</a></string>
    <string name="point2">2.  Click on Add money to Wallet</string>
    <string name="point3">3.  Click on Have a promo code </string>
    <string name="point4">  Enter the Amount and promo code  and submit </string>
    <string name="point5">  Your wallet will be then instantly loaded with the entered amount and promo code.</string>
    <string name="first">This offer is being organized by Pernod Ricard India Pvt. Ltd., a company duly incorporated under the Companies Act, 1956 and having its corporate office at Building No.8C, 15th Floor, DLF Cyber City, DLF Phase-II, Gurgaon, Haryana-122002, and registered office at: 5th Floor, D-3, District Centre, Saket, New Delhi-110017, in association with through its partner agency M/s Rock Castle Entertainment Pvt Ltd, a company duly incorporated under the Companies Act, 1956 and having its regd. office at Unit -223 Tower-A, 2nd Floor,  Shoppers Stop Building, Space Tech Park, Sec-49, Sohna Road, Gurgaon-122001, hereinafter referred to as the “Agency” hereinafter together referred to as the “Organiser”.</string>
    <string name="second">Please read the terms and conditions of the Offer before participating in it (hereinafter referred to as the “Offer”). By participating/ availing this Offer, it is deemed that the participants/ customers/ consumers (hereinafter collectively referred to as “Participant”) and/or Winners have irrevocably and unconditionally accepted all terms &amp; conditions contained herein, including any/all amendment, modification, etc. made thereto without demur and shall throughout remain bound to them as under:</string>
    <string name="third">i. By participating in this Offer, Participants fully and unconditionally agree to abide by the Terms and Conditions available on the <a href="">www.royalstaglargerun.com</a> (“T &amp; C Website”). Organizer’s decision shall be final and binding in all matters related to the Offer is subject to all requirements set forth herein.
</string>
    <string name="fourth">ii. Organizer reserves the right to exclude any person from the Offer on grounds of misconduct or criminal record.</string>
    <string name="fifth">iii.	Organizer reserves the right to terminate, modify or extend the Offer, at any time at its absolute discretion, without assigning any reason. </string>
    <string name="six">i.	This Offer is open only for Indian Citizen in select states who are above 25 years of age. Organizer’s employees and their family members, and its sponsors/partners are not eligible to participate in the Offer.</string>
    <string name="seven">The Offer is open only between 25th May 2019 to 15th June 2019 (hereinafter “Term”). Thereafter, Organizer will not be obligated in any manner whatsoever. Entries beyond the Term will not be considered valid for participation in the Offer.</string>
    <string name="eight">a.	A total of two (2) Lucky Winners from select states will be chosen by the Organizer who shall be entitled to the Mega Prize comprising of an all-expenses* (Hotel, Flight tickets &amp; World Cup Match Day ticket only) paid trip to England &amp; Wales in the months of June-July 2019. The said match ticket shall permit 1 (one) to watch any one of the scheduled match(es) at the ICC World Cup 2019. The Mega Prize would include the cost of (i) travel including return flight tickets from Mumbai; (ii) visa processing fee; (iii) boarding and lodging; Any additional cost incurred during the trip would be solely borne by the Winners and the Organizers shall not be liable for the same. The exact dates and other details shall be duly intimated to the winners closer to the date of travel on the mobile number provided by them on the participation form. The names of the Winners shall be announced within 60 days of the Offer Period from the record of the Participants and by a process of random selection.</string>
    <string name="nine">b.	Participants will also get an assured digital wallet cash back of Rs. 50 on downloading the Royal Stag – Large Run App.</string>
    <string name="ten">To participate in the Offer, the Participants will be required to give a Missed Call on 8010921092. The Participant will receive an automated SMS along with the link through which they will be able to see the detailed communication on the contest .</string>
    <string name="eleven">This contest is an arcade game in which participant needs to complete 5 levels and by completing these levels participant will be eligible for the lucky draw of mega prize (All expense paid trip to London for ICC world cup match)</string>
    <string name="tweleve">Winner(s) will be decided by a process of random selection by the Organizer.</string>
    <string name="thriteen">The Missed Call shall be deemed to be received when such ‘Missed Call’ hit reaches the server of the concerned mobile telecom operator. Organizer shall not be responsible and/or liable, in any manner whatsoever, for any network problem, breakdown of machinery, unclear network, etc. which causes disruption to the Missed Call as intended.</string>
    <string name="fourteen">Participant is not permitted to submit multiple entries/ Missed Call(s) in the Offer, if already participated successfully once.</string>
    <string name="fifteen">The organizer shall not be responsible for (including but not limited to):</string>
    <string name="sixteen">•	 For any network issues due to Operator or due to any congestion in the location</string>
    <string name="seventeen">•	For any SPAM generated messages</string>
    <string name="eighteen">•	For any call failures</string>
    <string name="nineteen">•	Any lost, late or misdirected computer transmission or network, electronic failures or any kind of any failure to receive entries owing to transmission failures or due to any technical reason</string>
    <string name="twenty">•	If the participant has registered himself to the DND of the telecom provider/ the participant has registered with National Do Not Call Registry/ Participant has specifically requested for not receiving messages for the specific campaign</string>
    <string name="twentyone">•	Other conditions beyond its reasonable control.</string>
    <string name="twentytwo">The decision on number/s winners is subject to the Organizer’s discretion.</string>
    <string name="twentythree">6.	Intellectual Property-</string>
    <string name="twentyfour">i.	All rights, title and interest, including but not limited to the Intellectual Property Rights, in the Offer material(s) and in any and all responses received shall vest solely and exclusively with PRI at all times. PRI or any person or entity permitted by PRI in this regard shall be entitled to use the responses received or any information in connection with the entry in any media for future Offer, marketing, publicity and any other purpose, without any permission and or payment to the Participant. </string>
    <string name="twentyfive">ii.	All material submitted in connection with the Offer (whether written, audio, electronic or visual form, or a combination of those) or any photographs, video and/or film footage and/or audio recording taken of Participants are assigned to PRI upon submission and become the property of PRI exclusively. PRI may use the material in any medium in any reasonable manner it sees fit. Copyright in any such material remains the sole property of PRI.</string>
    <string name="twentysix">7.	General Conditions-</string>
    <string name="twentyseven">i.	The Participant understands and agrees that the selected Winner(s) alone shall be entitled to prizes, subject to all terms and conditions mentioned herein, and furnishing of correct and complete details as indicated in conditions vi &amp; vii below (including but not limited to) in the prescribed manner and to the entire satisfaction of the Organizer.</string>
    <string name="twentyeight">ii.	The Offer will be promoted at the sole discretion of the Organizer.</string>
    <string name="twentynine">iii.	Organizer will announce the selected Winner/s as per the terms set out in Clause 4 above. The Winners will be intimated on the registered mobile number from which the Participant had participated in the Offer. The decision of the management of Organizer in this regard shall be final &amp; binding upon the Participant and/or the Winner(s), and the Participant/ Winner(s) hereby agree that no claims, disputes, etc. of any sort shall be raised against the Organizer.</string>
    <string name="thirty">iv.	Three attempts will be made to contact the winner on the registered mobile number provided to, and available with the Organizer. Thereafter, the Organizer, at its discretion, will choose the next winner without any further attempt to approach or contact the earlier selected winner.</string>
    <string name="thirtyone">v.	The prize can neither be exchanged nor redeemed for cash/ any non-monetary consideration nor it is transferable.</string>
    <string name="thirtytwo">vi.	The Winner/ Participant (as the case may be) will be required to collect their prize after completion of all formalities (submission of signed copy of Photo ID, Age Proof, Address proof and PAN Card) to the entire satisfaction of the Organizer within 15 days. In case the Winner(s)/ Participant does not collect its prize within the stipulated time period stated hereinabove, then the validity of the prize shall lapse automatically without any further notice to the Winner(s)/ Participant in this regard.</string>
    <string name="thirtythree">vii.	The prize is subject to the applicable laws of India. Any deduction of applicable taxes, levies and other statutory payments, including but not limited to applicable gift tax, shall be borne solely by the Winner. The prize would be delivered/handed over to the Winner only upon proper identification and verification of the Participant to the full satisfaction of the Organizer. The Winner shall be duly required to provide a copy of their PAN card and provide satisfactory proof of payment of all applicable taxes and levies The Winner shall be duly required to provide a copy of their PAN card and provide satisfactory proof of payment of all applicable taxes and levies, and all other requisite documents required for the purposes of Visa. Payments of all applicable taxes by the Winner shall be a condition precedent before the prize is finally provided to the Winner.</string>
    <string name="thirtyfour">viii.	In the event, the Visa application of the Winner is rejected on account of any ground whatsoever, the Organizers shall not be liable to compensate the Winner and the Winner shall have no claim whatsoever against the Organizers. </string>
    <string name="thirtyfive">ix.
While accepting the prize under the Offer, the Winner(s) may be required to execute an “indemnity and release of claims” form as may be provided by Organizer, as the case may be, which shall release the Organizer of all liability, loss, damage, demand, claim, etc. in connection with the Offer and prizes contemplated under this Offer. Failure to complete and sign any documents requested by Organizer may result in disqualification of such Participant and/or Winner. Thereafter, the Organizer, at its discretion, will be entitled to choose the next winner. All decisions of Organizer shall be final in this regard.
</string>
</resources>