<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.tagglabs.rs_reg.redeem"
    android:background="@mipmap/nbg">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/nback"
        android:background="#00ffffff"
        android:paddingTop="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingBottom="20sp"
        android:id="@+id/backredeem"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Steps to follew"
        android:gravity="center"
        android:layout_below="@id/backredeem"
        android:id="@+id/steps"
        android:textSize="20sp"
        android:textStyle="bold"
       android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/steps"
        android:paddingRight="20sp"
        android:paddingLeft="20sp"
        android:textColor="#540000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:autoLink="web"
            android:gravity="fill_vertical"
            android:text="@string/redeem"
            android:layout_alignParentRight="true"
            android:justificationMode="inter_word"

            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="19sp"
            android:layout_marginTop="20sp"
            android:id="@+id/one"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point2"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:layout_marginTop="20sp"
            android:id="@+id/two"
            android:layout_below="@+id/one"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point3"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:layout_marginTop="20sp"
            android:id="@+id/three"
            android:layout_below="@+id/two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4. "
            android:id="@+id/f4"
            android:layout_alignBaseline="@id/four"
            android:textSize="19sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point4"
            android:textSize="19sp"
            android:textColor="#FFFFFF"
            android:id="@+id/four"
            android:gravity="start"
            android:paddingLeft="20sp"
            android:layout_weight="1"
            android:layout_below="@+id/three"
            android:layout_marginTop="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5. "
            android:id="@+id/f5"
            android:layout_alignBaseline="@id/five"
            android:textSize="19sp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point5"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/four"
            android:id="@+id/five"
            android:textSize="19sp"
            android:paddingLeft="20sp"
            android:layout_marginTop="20sp"/>
    </RelativeLayout>

</RelativeLayout>